#88 fixed dnd button layout on tablets

--- a/src/client/styles/tablet.css
+++ b/src/client/styles/tablet.css
@@ -270,7 +270,6 @@
         flex: 1;
         align-items: center;
         justify-content: center;
-        width: 140px;
         flex-direction: row;
         text-align: center;
     }
